# pixi-bot

./: .gitignore  Dockerfile  MANIFEST.in  README.md  chatbot_example.py  compose.yaml  database_example.py  examples.txt  examples3-short.md  llm_convo_with_memory.py  main-discord.py  main-telegram.py  main.py  memory.py  persona.json  preprompt3-short.md  pyproject.toml  server.py  start.sh  system.md  test.py
.github/workflows/: python-publish.yml
api/: chatting.py  client.py  conversation.py  memory.py  utils.py
api/reflection/: __init__.py  discord.py  telegram.py
enums/: __init__.py
examples/: chatbot_example.py  database_example.py
pixi/: __init__.py  chatbot.py  chatclient.py  chatting.py  client.py  commands.py  database.py  memory.py  server.py  utils.py
pixi/addon/: addon_manager.py
pixi/agents/: __init__.py  base.py  memory.py  retrievalagent.py
pixi/apis/: __init__.py  aiohttpapi.py  api.py  giphy.py  wikimedia.py
pixi/caching/: __init__.py  audiocache.py  base.py  embedding.py  imagecache.py
pixi/enums/: __init__.py  messages.py
pixi/giphy/: api.py
pixi/reflection/: __init__.py  discord.py  telegram.py
pixi/reflection/message/: __init__.py  discord.py  telegram.py
pixi/typing/: __init__.py
src/pixi/: __init__.py  chatbot.py  chatting.py  client.py  commands.py  database.py  utils.py
src/pixi/addon/: addon_manager.py
src/pixi/caching/: __init__.py  audiocache.py  embedding.py  imagecache.py
src/pixi/reflection/: __init__.py  discord.py  telegram.py
src/pixi/resources/: system.md
src/pixi/storage/: paths.py
(+5 files in other folders)
