[project]
name = "pixi"
version = "1.0.0"
description = "A modular and multiplatform AI chatbot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "argparse>=1.4.0",
    "dotenv>=0.9.9",
    "openai>=2.8.1",
    "zstandard>=0.25.0"
]

[tool.uv]
package = true

[project.scripts]
pixi-cli = "pixi:main"

[project.optional-dependencies]
image = [
    "pillow>=12.0.0",
]
audio = [
    "ffmpegio>=0.11.1",
]
telegram = [
    "python-telegram-bot>=22.5",
]
discord = [
    "discord-py>=2.6.4"
]

[tool.setuptools]
py-modules = ['pixi']
